UI-3953 fix bug content editting it jump white hover mouse in content

--- a/platform-ui-skin/src/main/webapp/skin/less/ecms/skin/ecms-resources-wcmskin.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/ecms/skin/ecms-resources-wcmskin.less
@@ -254,10 +254,11 @@
     top: 0px;
 	}
 }
-
+.UICLVPortlet, .UIPresentationContainer{
+	border: 1px solid transparent;
+}
 .containerHoverClass {
   border:1px solid @primaryLightColor !important;
-
 	.edittingToolBarContainer {
 		display: block;
 	}
